# rosout_logger

./: CMakeLists.txt  README.md  package.xml  setup.py
debian/: changelog  control  rules
scripts/: logger.py
src/rosout_logger/: log_proxy.py  log_proxy_parameters.py  syslog_handler.py
test/: test_rosout_logger.test
test/rosout_logger_support/: test_rosout_logger.py  test_rosout_logger.test
