<?xml version="1.0"?>
<package>
  <name>rosout_logger</name>
  <version>0.0.1</version>
  <description>Configurable ROS to syslog bridge</description>

  <maintainer email="lg@endpoint.com">End Point Corp</maintainer>

  <license>Apache 2.0</license>

  <author email="wojciech.ziniewicz@gmail.com">Wojciech Ziniewicz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
